# Polecat-Ralf

./: .gitignore  Makefile
ralf-container/: README.md  pyproject.toml
ralf-container/ralf/: agent.py  llm.py  loop.py  main.py
ralf-container/ralf/config/: __init__.py
ralf-container/tests/: test_ask.py  test_llm.py  test_loop.py  test_tools.py
ralph-container/ralph/: agent.py  graph.py
