[tool.poetry]
name = "ralf"
version = "0.1.0"
description = "A cli tool to iterate on a developer design"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ralf"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
pydantic-settings = "^2.2"
langchain = "^1.2"
langgraph = "^1.0"
langchain-google-genai = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[tool.poetry.scripts]
ralf = "ralf.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
